infrastructure/istio/security-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: security-mtls
  namespace: security
spec:
  mtls:
    mode: PERMISSIVE
